<resources>
    <string name="app_name">Serene</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>


    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="improvement_in">Improvement (in %)</string>
...
    <string name="AppSavedFialed">The Appointment Reminder Did not Saved, Try Again</string>

    <!-- Delete App Reminder Page -->
    <string name="AppDetails">Appointment</string>
    <string name="DeleteApp">Delete Appointment</string>
    <string name="DeleteMessageApp">Are you sure you want to delete this Appointment Reminder ? </string>
    <string name="DeleteOKApp">Delete</string>
    <string name="DeleteCancleApp">Cancel</string>
    <string name="AppDeletedSuccess">The Appointment Reminder Deleted Successfully</string>
    <string name="AppDeletedFialed">The Appointment Reminder Did not Deleted, Try Again</string>

    <!-- Add Medicine Reminder Page -->
    <string name="AddMed">New Medicine</string>
...
    <string name="NotValidMI">Please Enter Valid Monthly Income Value should be no more than 5000000</string>
    <string name="NotValidCD">Only Letters Accepted in Chronic Disease</string>
    <string name="SocioSuccess">Success going to next</string>
    <string name="SocioFialed">There is Something Wrong, Please try again</string>

    <!-- GAD7 in Sign up Page -->
    <string name="GADSuccess">Success going to next</string>
    <string name="GADFialed">There is Something Wrong, Please try again</string>

    <!-- Draft Fragment Page -->
    <string name="All">ALL</string>
    <string name="TEXT">TEXT</string>
    <string name="VOICE">VOICE</string>
...
