...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.signup.Questionnairs"
    android:id="@+id/Questionnairs">


    <LinearLayout
        android:id="@+id/qContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
