...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".controller.main.calendar.PatientAppointmentDetailPage"
    android:id="@+id/PatientAppointmentDetailPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cloIcon"
        app:layout_constraintTop_toBottomOf="@+id/TimeTV" />


    <Button
        android:id="@+id/DeleteApp"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/delete_button"
        android:fontFamily="@font/montserrat"
        android:padding="3dp"
...
